Moved mmc/ide files location to extras/media/disk_images folder

Improved menu interface:
*menu movement with mouse
*colours are greyscaled when multitask disabled
*allow blinking text, like the input cursor (needs multitask on)
*new splash window type which disappears automatically (needs multitask on). Used only on change memory zones from debug cpu menu, but it will be used on more places probably

Improved debugger:
*you can now set conditions for all flags, written as: FS,FZ,FP,FV,FH,FN,FC
*now breakpoints are evaluated before running the current opcode (instead of after). So breakpoints like "PC=0" and doing a reset from menu, now works
*now you can set breakpoints from command line/config file but not enabled by default. You need --enable-breakpoints setting
*now the multitask setting is not lost when a breakpoint is fired
*now you can repeat last command by pressing enter on ZRCP (requires enabling a debug-setting)

Improved QL emulation: experimental support of LBYTES command, added QL root directory selector for mdv1, mdv2, flp1
Improved Sprite Viewer: Save sprite, TBBlue sprite viewer, inverse sprite, set bpp (8,4,2,1), set palette
Improved stdout driver. Now can show ansi colours
Improved messages windows. Can now find text using f and n
Improved footer. Host CPU % usage on footer is not enabled by default to avoid confussion with emulated CPU speed. You can enable it with a setting. Host CPU % usage is not show on Windows.

Fixed turbo mode and breakpoints. Breakpoints were disabled when changing turbo mode
Fixed latency problems on all audio drivers
Fixed AY sound bugs when volume levels where > 15
Fixed Windows pthreads version
Fixed TBBlue reset i/o ports when reset and hard reset
Fixed Windows freeze issues when doing cpu-step on ZRCP

Updated TBBlue boot loader

Some other minor bugfixes and improvements



Version 5.0. 21 April 2017 - Chase H.Q. edition
